refactor(common): 分页模型迁移至 pagination 包，清理 model 遗留